# devops-agent

./: .gitignore  Cargo.toml  LICENSE  MCP_SETUP.md  ORCHESTRATOR.md  README.md  approve_workflows.sh  checklist.yaml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: chore-bot.yml  devops-agent.yml
agents/architecture-reviewer/: Cargo.toml  README.md
agents/architecture-reviewer/src/: analyzer.rs  main.rs  reporter.rs
agents/bug/: prompt.md
agents/chore/: prompt.md
agents/coverage/: Cargo.toml  README.md
agents/coverage/src/: analyzer.rs  main.rs  reporter.rs
agents/feature/: prompt.md
agents/feature-implementer/: Cargo.toml  README.md
agents/feature-implementer/src/: analyzer.rs  implementer.rs  main.rs
agents/issue-creator/: Cargo.toml  README.md  example-batch.json
agents/issue-creator/src/: creator.rs  main.rs
agents/note-scanner/: Cargo.toml  README.md
agents/note-scanner/src/: main.rs  scanner.rs
agents/refactor-analyzer/: Cargo.toml  README.md
agents/refactor-analyzer/src/: analyzer.rs  main.rs  reporter.rs
agents/refactor-plan/: prompt.md
agents/test/: prompt.md
agents/todo-resolver/: Cargo.toml  README.md
agents/todo-resolver/src/: analyzer.rs  main.rs  resolver.rs
agents/todo-scanner/: Cargo.toml  README.md
agents/todo-scanner/src/: main.rs  scanner.rs
src/: analyzer.rs  config.rs  git_workflow.rs  github.rs  main.rs  mcp_server.rs  orchestrator.rs  reporter.rs  scanner.rs  subagent.rs
syster/crates/syster-lsp/src/server/: references.rs
