[package]
name = "devops-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
async-trait = "0.1"

[[bin]]
name = "devops-agent"
path = "src/main.rs"

[[bin]]
name = "devops-agent-mcp"
path = "src/mcp_server.rs"

[[bin]]
name = "orchestrator"
path = "src/orchestrator.rs"
